<resources>
    <string name="app_name">Darts</string>
    <string name="points20">20 points</string>
    <string name="points10">10 points</string>
    <string name="points5">5 points</string>
    <string name="point1">1 point</string>
    <string name="zero">0</string>
    <string name="reset">reset</string>
    <string name="darts">darts_image_background</string>
    <string name="Darts">game</string>
    <string name="Player_Name_1">Player 1</string>
    <string name="Player_Name_2">Player 2</string>

</resources>
